virt01/manual/torrent/emby/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: emby
  labels:
    app: emby
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
      annotations:
        backup.velero.io/backup-volumes-excludes: movies,tvshows
        backup.velero.io/backup-volume: emby-pv
    spec:
#      runtimeClassName: nvidia
      serviceAccountName: emby-sa
      containers:
        - name: emby
          image: harbor.nf.lab/proxy.docker.io/emby/embyserver
          imagePullPolicy: Always
          ports:
            - containerPort: 8096
              name: emby-port
              protocol: TCP
          resources:
            requests:
              cpu: 20m
              memory: 100Mi
          volumeMounts:
            - name: emby-pv
              mountPath: /config
            - name: tvshows
              mountPath: /tv
            - name: movies
              mountPath: /movies
      volumes:
        - name: emby-pv
          persistentVolumeClaim:
            claimName: emby-pvc
        - name: movies
          hostPath:
            type: Directory
#          nfs:
            path: /mnt/ssd01/emby/Movies
#            server: 10.0.0.100
        - name: tvshows
          hostPath:
            type: Directory
#          nfs:
            path: /mnt/ssd01/emby/TVShows
#            server: 10.0.0.100
