virt01/manual/torrent/emby/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby-svc
  labels:
    app: emby
  annotations:
    metallb.universe.tf/ip-allocated-from-pool: vlan1000-apps
    metallb.universe.tf/loadBalancerIPs: 10.0.1.117
    external-dns.alpha.kubernetes.io/hostname: emby.k3s.nf.lab.,emby.nf.lab.
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 8096
      protocol: TCP
      targetPort: 8096
      name: emby-svc-port
  selector:
    app: emby
